[package]
name = "split_by"
description = "Split anything implementing Read trait by multiple sequences of bytes"
version = "0.1.0"
authors = ["jsen- <max.enhanced@gmail.com>"]
documentation = "https://docs.rs/split_by"
repository = "https://github.com/jsen-/split_by"
readme = "README.md"
keywords = ["iterator", "split", "multiple", "sequence"]
license = "MIT/Apache-2.0"

[dependencies]
aho-corasick = "0.5"
